log
Fri 10 May 2024 12:44:52 AM UTC: 
 tests:  1|8
total_score: 0/70
c0b0469
Fri 10 May 2024 12:51:26 AM UTC: 
 treemap.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
e8b4a39
Fri 10 May 2024 12:53:42 AM UTC: 
 treemap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
4cd8ed2
Fri 10 May 2024 12:56:49 AM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  6|7
total_score: 5/70
bd43b11
Fri 10 May 2024 01:04:38 AM UTC: 
 treemap.c | 15 ---------------
 1 file changed, 15 deletions(-)
 tests:  4|7
total_score: 5/70
b9b5775
Fri 10 May 2024 01:05:34 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|6
total_score: 5/70
2609878
Fri 10 May 2024 01:10:46 AM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  8|6
total_score: 5/70
a387629
Fri 10 May 2024 01:14:20 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
2a87752
